2005-05-23  Chris Petersen  <cpetersen@apple.com>

        Merged fix for <rdar://problem/4091956> from TOT to SUTiCambridge

     2005-04-25  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/4091956> JavaScript drop handlers don't receive more than one dropped item

        * kwq/KWQClipboard.mm:
        (cocoaTypeFromMIMEType): Remove some use of compare -- less efficient than a simpler "==" check.
        Fixed non-GC-safe code to use KWQCFAutorelease instead.
        (MIMETypeFromCocoaType): Use fromCFString instead of fromNSString to avoid a cast.
        (KWQClipboard::getData): Rearrange so that we'll use filenames if both filenames and a URL are present, since
        filenames can accomodate multiple items. Fix bug where we'd return multiple filenames when the type requested
        is "URL". Fixed loop that computed the count over and over again for the loop termination condition. Check
        that the data for NSFilenamesPboardType is an NSArray instead of assuming it is.
        (KWQClipboard::setData): Use isEqualToString: instead of == when comparing types.

2005-05-23  Chris Petersen <cpetersen@apple.com>

        Merged fix for <rdar://problem/4091082>  from TOT for SUTiCambridge

    2005-04-22  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/4091082> Google Suggest no longer works due to lack of "frameElement"

        * khtml/ecma/kjs_window.h: Added FrameElement.
        * khtml/ecma/kjs_window.cpp: (Window::get): Added "frameElement".
        * khtml/ecma/kjs_window.lut.h: Regenerated.

=== WebCore-415.5 ===

2005-05-07  Adele Peterson  <adele@apple.com>

        Merged fix for <rdar://problem/4110366> from TOT for SUTiAtlanta

    2005-05-07  David Harrison  <harrison@apple.com>

        Reviewed by John.

        <rdar://problem/4110366> Deleting text at the end of email moves insertion point to the top of the document
        